--- a/linii_lubvi.ipynb
+++ b/linii_lubvi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = f'linii_lubvi_{current_datetime.day}_{current_datetime.month}.xlsx'"
+    "day = current_datetime.day \n",
+    "month = current_datetime.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = f'linii_lubvi_{day}_{month}.xlsx'"
    ]
   },
   {
@@ -397,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
