--- a/sokolov_api_all.ipynb
+++ b/sokolov_api_all.ipynb
@@ -1194,7 +1194,7 @@
    },
    "outputs": [],
    "source": [
-    "# data.to_csv(r'C:\\Users\\Trenkin.Sergey\\Desktop\\parsers\\sokolov_current_data\\sokolov_all.csv', index=False)"
+    "data.to_csv(rf'C:\\Users\\Trenkin.Sergey\\Desktop\\parsers\\workspace\\sokolov_all_{day_now}_{month_now}_{datetime.today().year}.csv', index=False)"
    ]
   },
   {
@@ -1204,7 +1204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\parsed_data\\sokolov_all_{day_now}_{month_now}_{datetime.today().year}.csv', index=False)"
+    "data.to_csv(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\parsed_data\\sokolov_all_{day_now}_{month_now}_{datetime.today().year}.csv', index=False)"
    ]
   }
  ],
