rename "name", delete "price"

--- a/linii_lubvi.ipynb
+++ b/linii_lubvi.ipynb
@@ -221,18 +221,9 @@
     "        group = np.nan\n",
     "        \n",
     "    try:\n",
-    "        price = soup.find('a', class_=\"btn red btn--block\").text.strip()\n",
-    "        try:\n",
-    "            price = soup.find('div', class_=\"pro-price-block\").find('span', class_=\"pro-price-item\").text\n",
-    "        except:\n",
-    "            price = np.nan\n",
+    "        name_pr = soup.find('div', class_=\"title-border title-border--mb\").find('h1', {'itemprop': 'name'}).text\n",
     "    except:\n",
-    "        price = np.nan\n",
-    "        \n",
-    "    try:\n",
-    "        name = soup.find('div', class_=\"title-border title-border--mb\").find('h1', {'itemprop': 'name'}).text\n",
-    "    except:\n",
-    "        name = np.nan\n",
+    "        name_pr = np.nan\n",
     "\n",
     "    try:\n",
     "        weight = soup.find('div', class_=\"param-item-right middle-weight\").text\n",
@@ -264,9 +255,8 @@
     "    linii_params = dict(zip(params_names, params_values))\n",
     "    \n",
     "    groups.append(group)\n",
-    "    names.append(name)\n",
+    "    names.append(name_pr)\n",
     "    weights.append(weight)\n",
-    "    prices.append(price)\n",
     "    params.append(linii_params)    "
    ]
   },
