--- a/linii_lubvi.ipynb
+++ b/linii_lubvi.ipynb
@@ -17,7 +17,6 @@
     "from fake_useragent import UserAgent\n",
     "import pandas as pd\n",
     "import warnings\n",
-    "from notebooks.data_cleaner import delete_files_in_folder \n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +132,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60ce0882a16840f9a36ee7d780778c71",
+       "model_id": "a73e00e16d2c40ac9ce1992288318568",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/132 [00:00<?, ?it/s]"
+       "  0%|          | 0/122 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,18 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56238d0abeca4cf08003deaedf0e5c0f",
+       "model_id": "bc1ad1ed910d4abaafdf639f20a928b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1588 [00:00<?, ?it/s]"
+       "  0%|          | 0/1444 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -221,9 +220,18 @@
     "        group = np.nan\n",
     "        \n",
     "    try:\n",
-    "        name_pr = soup.find('div', class_=\"title-border title-border--mb\").find('h1', {'itemprop': 'name'}).text\n",
+    "        price = soup.find('a', class_=\"btn red btn--block\").text.strip()\n",
+    "        try:\n",
+    "            price = soup.find('div', class_=\"pro-price-block\").find('span', class_=\"pro-price-item\").text\n",
+    "        except:\n",
+    "            price = np.nan\n",
     "    except:\n",
-    "        name_pr = np.nan\n",
+    "        price = np.nan\n",
+    "        \n",
+    "    try:\n",
+    "        name = soup.find('div', class_=\"title-border title-border--mb\").find('h1', {'itemprop': 'name'}).text\n",
+    "    except:\n",
+    "        name = np.nan\n",
     "\n",
     "    try:\n",
     "        weight = soup.find('div', class_=\"param-item-right middle-weight\").text\n",
@@ -238,7 +246,7 @@
     "    \n",
     "    len_params = len(param)\n",
     "    for i in range(0, len_params):\n",
-    "        name = param[i].find('div', class_='param-item-left').text.strip()\n",
+    "        name_ = param[i].find('div', class_='param-item-left').text.strip()\n",
     "        try:\n",
     "            value = param[i].find('div', class_='param-item-right 111').text.strip()\n",
     "        except:\n",
@@ -246,7 +254,7 @@
     "                value = param[i].find('div', class_='param-item-right 111').find('a').text.stip()\n",
     "            except:\n",
     "                value = param[i].find('div', class_='param-item-right 222').text.strip()\n",
-    "        params_names.append(name)\n",
+    "        params_names.append(name_)\n",
     "        try:\n",
     "            params_values.append(value)\n",
     "        except:\n",
@@ -255,14 +263,15 @@
     "    linii_params = dict(zip(params_names, params_values))\n",
     "    \n",
     "    groups.append(group)\n",
-    "    names.append(name_pr)\n",
+    "    names.append(name)\n",
     "    weights.append(weight)\n",
+    "    prices.append(price)\n",
     "    params.append(linii_params)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +325,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>/catalog/product/kolca_2155372/</td>\n",
-       "      <td>18 390</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>32 270</td>\n",
+       "      <td>Кольцо обручальное из красного золота (арт. Т1...</td>\n",
        "      <td>2.64 г</td>\n",
        "      <td>Кольца</td>\n",
        "      <td>{'Ширина': '5 мм', 'Металл': 'Золото (Красное)...</td>\n",
@@ -325,8 +334,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>/catalog/product/kolca_2150980/</td>\n",
-       "      <td>13 690</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>25 020</td>\n",
+       "      <td>Кольцо обручальное из красного золота (арт. Т1...</td>\n",
        "      <td>2.24 г</td>\n",
        "      <td>Кольца</td>\n",
        "      <td>{'Ширина': '4 мм', 'Металл': 'Золото (Красное)...</td>\n",
@@ -334,8 +343,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>/catalog/product/kolca_2253156/</td>\n",
-       "      <td>17 590</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>20 500</td>\n",
+       "      <td>Кольцо обручальное из разных цветов золота (ар...</td>\n",
        "      <td>1.77 г</td>\n",
        "      <td>Кольца</td>\n",
        "      <td>{'Ширина': '4 мм', 'Металл': 'Золото (Мультицв...</td>\n",
@@ -343,8 +352,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>/catalog/product/kolca_7248203/</td>\n",
-       "      <td>19 590</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>31 300</td>\n",
+       "      <td>Кольцо обручальное из красного золота (арт. Т1...</td>\n",
        "      <td>2.83 г</td>\n",
        "      <td>Кольца</td>\n",
        "      <td>{'Ширина': '3 мм', 'Высота': '1 мм', 'Металл':...</td>\n",
@@ -352,8 +361,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>/catalog/product/cepochki_2207738/</td>\n",
-       "      <td>60 820</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>62 340</td>\n",
+       "      <td>Цепочка из красного золота (арт. ЦНН20512050)</td>\n",
        "      <td>6.1 г</td>\n",
        "      <td>Цепи</td>\n",
        "      <td>{'Ширина': '2 мм', 'Металл': 'Золото (Красное)...</td>\n",
@@ -368,86 +377,99 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1583</th>\n",
-       "      <td>/catalog/product/krestiki_8596824/</td>\n",
-       "      <td>47 590</td>\n",
-       "      <td>Страна производитель</td>\n",
-       "      <td>2.73 г</td>\n",
-       "      <td>Крестики</td>\n",
-       "      <td>{'Длина': '28 мм', 'Ширина': '18 мм', 'Металл'...</td>\n",
+       "      <th>1439</th>\n",
+       "      <td>/catalog/product/podveski-i-kulony_9607649/</td>\n",
+       "      <td>16 990</td>\n",
+       "      <td>Подвеска с бриллиантом (арт. Т141035685)</td>\n",
+       "      <td>0.36 г</td>\n",
+       "      <td>Подвески и кулоны</td>\n",
+       "      <td>{'Длина': '9 мм', 'Ширина': '4 мм', 'Металл': ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1584</th>\n",
-       "      <td>/catalog/product/cepochki_10340676/</td>\n",
-       "      <td>98 230</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <th>1440</th>\n",
+       "      <td>/catalog/product/sergi_9682067/</td>\n",
+       "      <td>59 990</td>\n",
+       "      <td>Серьги с бриллиантами (арт. Т301026944)</td>\n",
        "      <td></td>\n",
-       "      <td>Цепи</td>\n",
-       "      <td>{'Металл': 'Золото (Красное)', 'Проба': '585',...</td>\n",
+       "      <td>Серьги</td>\n",
+       "      <td>{'Длина': '14 мм', 'Ширина': '3 мм', 'Металл':...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1585</th>\n",
-       "      <td>/catalog/product/braslety_9638820/</td>\n",
-       "      <td>21 390</td>\n",
-       "      <td>Страна производитель</td>\n",
-       "      <td>1.46 г</td>\n",
-       "      <td>Браслеты</td>\n",
-       "      <td>{'Металл': 'Золото (Красное)', 'Проба': '585',...</td>\n",
+       "      <th>1441</th>\n",
+       "      <td>/catalog/product/podveski-i-kulony_8852200/</td>\n",
+       "      <td>5 990</td>\n",
+       "      <td>Подвеска с жемчугом и фианитами (арт. Т148035079)</td>\n",
+       "      <td>1.1 г</td>\n",
+       "      <td>Подвески и кулоны</td>\n",
+       "      <td>{'Длина': '20 мм', 'Ширина': '12 мм', 'Металл'...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1586</th>\n",
+       "      <th>1442</th>\n",
        "      <td>/catalog/product/kolca_9556127/</td>\n",
-       "      <td>35 890</td>\n",
-       "      <td>Страна производитель</td>\n",
+       "      <td>43 590</td>\n",
+       "      <td>Кольцо   585 пробы с бриллиантом (арт. Т30101Б...</td>\n",
        "      <td>2.67 г</td>\n",
        "      <td>Кольца</td>\n",
        "      <td>{'Длина': '20 мм', 'Ширина': '12 мм', 'Металл'...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1587</th>\n",
-       "      <td>/catalog/product/kolca_9172226/</td>\n",
-       "      <td>305 190</td>\n",
-       "      <td>Страна производитель</td>\n",
-       "      <td>1.61 г</td>\n",
-       "      <td>Кольца</td>\n",
-       "      <td>{'Длина': '21 мм', 'Ширина': '4 мм', 'Металл':...</td>\n",
+       "      <th>1443</th>\n",
+       "      <td>/catalog/product/sergi_9637335/</td>\n",
+       "      <td>53 190</td>\n",
+       "      <td>Серьги из красного золота (арт. Т140029609)</td>\n",
+       "      <td>3.22 г</td>\n",
+       "      <td>Серьги</td>\n",
+       "      <td>{'Металл': 'Золото (Красное)', 'Проба': '585',...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1588 rows × 6 columns</p>\n",
+       "<p>1444 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    links    price                  name  \\\n",
-       "0         /catalog/product/kolca_2155372/   18 390  Страна производитель   \n",
-       "1         /catalog/product/kolca_2150980/   13 690  Страна производитель   \n",
-       "2         /catalog/product/kolca_2253156/   17 590  Страна производитель   \n",
-       "3         /catalog/product/kolca_7248203/   19 590  Страна производитель   \n",
-       "4      /catalog/product/cepochki_2207738/   60 820  Страна производитель   \n",
-       "...                                   ...      ...                   ...   \n",
-       "1583   /catalog/product/krestiki_8596824/   47 590  Страна производитель   \n",
-       "1584  /catalog/product/cepochki_10340676/   98 230  Страна производитель   \n",
-       "1585   /catalog/product/braslety_9638820/   21 390  Страна производитель   \n",
-       "1586      /catalog/product/kolca_9556127/   35 890  Страна производитель   \n",
-       "1587      /catalog/product/kolca_9172226/  305 190  Страна производитель   \n",
+       "                                            links   price  \\\n",
+       "0                 /catalog/product/kolca_2155372/  32 270   \n",
+       "1                 /catalog/product/kolca_2150980/  25 020   \n",
+       "2                 /catalog/product/kolca_2253156/  20 500   \n",
+       "3                 /catalog/product/kolca_7248203/  31 300   \n",
+       "4              /catalog/product/cepochki_2207738/  62 340   \n",
+       "...                                           ...     ...   \n",
+       "1439  /catalog/product/podveski-i-kulony_9607649/  16 990   \n",
+       "1440              /catalog/product/sergi_9682067/  59 990   \n",
+       "1441  /catalog/product/podveski-i-kulony_8852200/   5 990   \n",
+       "1442              /catalog/product/kolca_9556127/  43 590   \n",
+       "1443              /catalog/product/sergi_9637335/  53 190   \n",
        "\n",
-       "      weight     group                                             params  \n",
-       "0     2.64 г    Кольца  {'Ширина': '5 мм', 'Металл': 'Золото (Красное)...  \n",
-       "1     2.24 г    Кольца  {'Ширина': '4 мм', 'Металл': 'Золото (Красное)...  \n",
-       "2     1.77 г    Кольца  {'Ширина': '4 мм', 'Металл': 'Золото (Мультицв...  \n",
-       "3     2.83 г    Кольца  {'Ширина': '3 мм', 'Высота': '1 мм', 'Металл':...  \n",
-       "4      6.1 г      Цепи  {'Ширина': '2 мм', 'Металл': 'Золото (Красное)...  \n",
-       "...      ...       ...                                                ...  \n",
-       "1583  2.73 г  Крестики  {'Длина': '28 мм', 'Ширина': '18 мм', 'Металл'...  \n",
-       "1584              Цепи  {'Металл': 'Золото (Красное)', 'Проба': '585',...  \n",
-       "1585  1.46 г  Браслеты  {'Металл': 'Золото (Красное)', 'Проба': '585',...  \n",
-       "1586  2.67 г    Кольца  {'Длина': '20 мм', 'Ширина': '12 мм', 'Металл'...  \n",
-       "1587  1.61 г    Кольца  {'Длина': '21 мм', 'Ширина': '4 мм', 'Металл':...  \n",
+       "                                                   name  weight  \\\n",
+       "0     Кольцо обручальное из красного золота (арт. Т1...  2.64 г   \n",
+       "1     Кольцо обручальное из красного золота (арт. Т1...  2.24 г   \n",
+       "2     Кольцо обручальное из разных цветов золота (ар...  1.77 г   \n",
+       "3     Кольцо обручальное из красного золота (арт. Т1...  2.83 г   \n",
+       "4         Цепочка из красного золота (арт. ЦНН20512050)   6.1 г   \n",
+       "...                                                 ...     ...   \n",
+       "1439           Подвеска с бриллиантом (арт. Т141035685)  0.36 г   \n",
+       "1440            Серьги с бриллиантами (арт. Т301026944)           \n",
+       "1441  Подвеска с жемчугом и фианитами (арт. Т148035079)   1.1 г   \n",
+       "1442  Кольцо   585 пробы с бриллиантом (арт. Т30101Б...  2.67 г   \n",
+       "1443        Серьги из красного золота (арт. Т140029609)  3.22 г   \n",
        "\n",
-       "[1588 rows x 6 columns]"
+       "                  group                                             params  \n",
+       "0                Кольца  {'Ширина': '5 мм', 'Металл': 'Золото (Красное)...  \n",
+       "1                Кольца  {'Ширина': '4 мм', 'Металл': 'Золото (Красное)...  \n",
+       "2                Кольца  {'Ширина': '4 мм', 'Металл': 'Золото (Мультицв...  \n",
+       "3                Кольца  {'Ширина': '3 мм', 'Высота': '1 мм', 'Металл':...  \n",
+       "4                  Цепи  {'Ширина': '2 мм', 'Металл': 'Золото (Красное)...  \n",
+       "...                 ...                                                ...  \n",
+       "1439  Подвески и кулоны  {'Длина': '9 мм', 'Ширина': '4 мм', 'Металл': ...  \n",
+       "1440             Серьги  {'Длина': '14 мм', 'Ширина': '3 мм', 'Металл':...  \n",
+       "1441  Подвески и кулоны  {'Длина': '20 мм', 'Ширина': '12 мм', 'Металл'...  \n",
+       "1442             Кольца  {'Длина': '20 мм', 'Ширина': '12 мм', 'Металл'...  \n",
+       "1443             Серьги  {'Металл': 'Золото (Красное)', 'Проба': '585',...  \n",
+       "\n",
+       "[1444 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +503,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -541,18 +563,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1588 entries, 0 to 1587\n",
+      "RangeIndex: 1444 entries, 0 to 1443\n",
       "Data columns (total 6 columns):\n",
       " #   Column  Non-Null Count  Dtype  \n",
       "---  ------  --------------  -----  \n",
-      " 0   links   1588 non-null   object \n",
-      " 1   price   1588 non-null   int32  \n",
-      " 2   name    1588 non-null   object \n",
-      " 3   weight  1588 non-null   float64\n",
-      " 4   group   1588 non-null   object \n",
-      " 5   params  1588 non-null   object \n",
+      " 0   links   1444 non-null   object \n",
+      " 1   price   1444 non-null   int32  \n",
+      " 2   name    1444 non-null   object \n",
+      " 3   weight  1444 non-null   float64\n",
+      " 4   group   1444 non-null   object \n",
+      " 5   params  1444 non-null   object \n",
       "dtypes: float64(1), int32(1), object(4)\n",
-      "memory usage: 68.4+ KB\n"
+      "memory usage: 62.2+ KB\n"
      ]
     }
    ],
@@ -562,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,11 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\parsed_data\\{filename}.csv', index=False)"
+    "df.to_csv(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\parsed_data\\{filename}.csv', index=False)"
    ]
   },
   {
@@ -583,9 +605,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "delete_files_in_folder('C:\\Users\\Trenkin.Sergey\\Desktop\\parsers\\linii_lubvi_current_data')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
