--- a/sokolov_api_all.ipynb
+++ b/sokolov_api_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0cc894ed-995c-4555-bc3a-195b585f0ff4",
    "metadata": {
     "tags": []
@@ -1628,8 +1628,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "003419ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_files_in_folder(folder_path):\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "        try:\n",
+    "            if os.path.isfile(file_path):\n",
+    "                os.remove(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(f'Ошибка при удалении файла {file_path}. {e}')\n",
+    "            \n",
+    "delete_files_in_folder('C:\\\\Users\\Trenkin.Sergey\\Desktop\\parsers\\sokolov_current_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce7aaa75",
    "metadata": {},
    "outputs": [],
    "source": []
