--- a/sokolov_api_all.ipynb
+++ b/sokolov_api_all.ipynb
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "003419ed",
    "metadata": {},
    "outputs": [],
@@ -1642,7 +1642,7 @@
     "        except Exception as e:\n",
     "            print(f'Ошибка при удалении файла {file_path}. {e}')\n",
     "            \n",
-    "delete_files_in_folder('C:\\\\Users\\Trenkin.Sergey\\Desktop\\parsers\\sokolov_current_data')"
+    "delete_files_in_folder(way)"
    ]
   },
   {
