--- a/data_all.ipynb
+++ b/data_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 672,
    "id": "e52a6b96",
    "metadata": {
     "tags": []
@@ -15,6 +15,7 @@
     "from tqdm import tqdm\n",
     "import warnings\n",
     "import datetime as dt\n",
+    "from sqlalchemy import create_engine\n",
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', None)"
    ]
@@ -5130,8 +5131,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 673,
    "id": "4e273cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql://yura:ivanov24.07@51.250.54.232:5432/dldb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 677,
+   "id": "db586a10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = result.drop(columns=['price', 'group', 'index'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 678,
+   "id": "02d2c8c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "587"
+      ]
+     },
+     "execution_count": 678,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.to_sql('all_data', engine, schema = 'yura', if_exists='replace', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdb89079",
    "metadata": {},
    "outputs": [],
    "source": []
