--- a/data_all.ipynb
+++ b/data_all.ipynb
@@ -5121,12 +5121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 683,
    "id": "ccd0a126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('result_ada_sl_sklv_ll.csv', index=False)"
+    "result.to_csv(fr'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\Онлайн мониторинг\\data\\\\monthly_monitoring_{date_now}.csv', index=False)"
    ]
   },
   {
@@ -5172,8 +5172,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 682,
    "id": "fdb89079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lock_type_or_weaving_type\n",
+       "Без вставки     155\n",
+       "Ромб двойной     83\n",
+       "Якорь            70\n",
+       "Гарибальди       68\n",
+       "Нонна            60\n",
+       "               ... \n",
+       "2.74 г            1\n",
+       "8.06 г            1\n",
+       "7.73 г            1\n",
+       "0,7               1\n",
+       "Византия          1\n",
+       "Name: count, Length: 64, dtype: int64"
+      ]
+     },
+     "execution_count": 682,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[result['product_group(ТН)'].str.contains('ЦБ')]['lock_type_or_weaving_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4071ad3",
    "metadata": {},
    "outputs": [],
    "source": []
