--- a/data_all.ipynb
+++ b/data_all.ipynb
@@ -22,20 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 934,
    "id": "74a24d32",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\Trenkin.Sergey\\Desktop\\all')\n",
-    "# os.chdir(r'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\parsed_data')"
+    "os.chdir(r'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\parsed_data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 935,
    "id": "5332f1be",
    "metadata": {},
    "outputs": [],
@@ -62,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "df_sokolov = pd.read_csv(r'sokolov_all_14_5_2024.csv')"
+    "df_sokolov = pd.read_csv(fr'sokolov_all_{date_now}.csv')"
    ]
   },
   {
@@ -880,24 +879,6 @@
    ],
    "source": [
     "df_sokolov['discount'].value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 795,
-   "id": "4dbf872d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10%-18.07397069085834, 20%-23.237962316817864, 25%-10.88625261688765, без скидки-47.801814375436145\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'10%-{(259 / 1433) * 100}, 20%-{(333 / 1433) * 100}, 25%-{(156 / 1433) * 100}, без скидки-{(685 / 1433) * 100}')"
    ]
   },
   {
@@ -1954,7 +1935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sokolov.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\sokolov_{day}_{month}_{year}.xlsx', index=False)"
+    "df_sokolov.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\sokolov_{date_now}.xlsx', index=False)"
    ]
   },
   {
@@ -1974,7 +1955,7 @@
    },
    "outputs": [],
    "source": [
-    "df_sunlight = pd.read_csv(r'sunlight_all_14_5_2024.csv')"
+    "df_sunlight = pd.read_csv(rf'sunlight_all_{date_now}.csv')"
    ]
   },
   {
@@ -2631,18 +2612,26 @@
    "outputs": [],
    "source": [
     "def discount_value_sl(discount):\n",
-    "    if '10%' in discount:\n",
-    "        return 0.9\n",
-    "    elif '15%' in discount:\n",
-    "        return 0.85\n",
-    "    elif '20%' in discount:\n",
-    "        return 0.8\n",
-    "    elif '25%' in discount:\n",
-    "        return 0.75\n",
-    "    elif '30%' in discount:\n",
-    "        return 0.5\n",
+    "    if '55%' in discount:\n",
+    "        return 0.45\n",
+    "    elif '50%' in discount:\n",
+    "        return 0.50\n",
+    "    elif '45%' in discount:\n",
+    "        return 0.55\n",
     "    elif '40%' in discount:\n",
     "        return 0.6\n",
+    "    elif '35%' in discount:\n",
+    "        return 0.65\n",
+    "    elif '30%' in discount:\n",
+    "        return 0.7\n",
+    "    elif '25%' in discount:\n",
+    "        return 0.75\n",
+    "    elif '20%' in discount:\n",
+    "        return 0.8\n",
+    "    elif '15%' in discount:\n",
+    "        return 0.85\n",
+    "    elif '10%' in discount:\n",
+    "        return 0.9 \n",
     "    elif '1=2' in discount:\n",
     "        return 0.5\n",
     "    return 1"
@@ -2786,9 +2775,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Бонусными баллами у Sunlight можно оплатить до 50% от стоимости, поэтому для расчета персональной цены используются следующая логика:\n",
-    "# Если количество бонусных баллов меньше или равно 50% от стоимости изделия, тогда стоимость равна - цена - бонусные баллы\n",
-    "# Иначе стоимость равна - цена - 50% от цены"
+    "# Бонусными баллами у Sunlight можно оплатить до 30% от стоимости, поэтому для расчета персональной цены используются следующая логика:\n",
+    "# Если количество бонусных баллов меньше или равно 30% от стоимости изделия, тогда стоимость равна - цена - бонусные баллы\n",
+    "# Иначе стоимость равна - цена - 30% от цены"
    ]
   },
   {
@@ -3073,7 +3062,7 @@
    },
    "outputs": [],
    "source": [
-    "df_sunlight.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\sunlight_{day}_{month}_{year}.xlsx', index=False)"
+    "df_sunlight.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\sunlight_{date_now}.xlsx', index=False)"
    ]
   },
   {
@@ -3113,7 +3102,7 @@
    },
    "outputs": [],
    "source": [
-    "df_adamas = pd.read_csv(r'C:\\Users\\Trenkin.Sergey\\Desktop\\parsers\\workspace\\adamas_all_16_5_2024.csv')"
+    "df_adamas = pd.read_csv(rf'adamas_all_{date_now}.csv')"
    ]
   },
   {
@@ -3342,16 +3331,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
-   "id": "2fac75ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_adamas.to_excel(r'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\adamas_8_5_2024.xlsx', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 873,
    "id": "b9e57349",
    "metadata": {
@@ -3517,69 +3496,7 @@
    },
    "outputs": [],
    "source": [
-    "df_adamas.to_excel(r'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\adamas_8_5_2024.xlsx', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 883,
-   "id": "7fa11e98",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3972 entries, 0 to 4393\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                     Non-Null Count  Dtype  \n",
-      "---  ------                     --------------  -----  \n",
-      " 0   data                       3972 non-null   object \n",
-      " 1   competitor                 3972 non-null   object \n",
-      " 2   name                       3972 non-null   object \n",
-      " 3   group                      3972 non-null   object \n",
-      " 4   weight                     3972 non-null   float64\n",
-      " 5   price_personal             3972 non-null   float64\n",
-      " 6   price                      3972 non-null   int64  \n",
-      " 7   discount                   3972 non-null   float64\n",
-      " 8   insert                     3972 non-null   object \n",
-      " 9   metal                      3972 non-null   object \n",
-      " 10  lock_type_or_weaving_type  3972 non-null   object \n",
-      " 11  url                        3972 non-null   object \n",
-      " 12  price_per_gramm            3972 non-null   float64\n",
-      " 13  price_case                 3972 non-null   object \n",
-      " 14  product_group(ТГ)          3972 non-null   object \n",
-      " 15  product_group(ТН)          3972 non-null   object \n",
-      "dtypes: float64(4), int64(1), object(11)\n",
-      "memory usage: 527.5+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_adamas.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 884,
-   "id": "b3600468",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17281.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print((df_adamas['price_personal'].sum() / df_adamas['weight'].sum()).round(0))"
+    "df_adamas.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\adamas_{date_now}.xlsx', index=False)"
    ]
   },
   {
@@ -3599,7 +3516,7 @@
    },
    "outputs": [],
    "source": [
-    "df_ll = pd.read_csv(r'linii_lubvi_14_5_2024.csv')"
+    "df_ll = pd.read_csv(rf'linii_lubvi_{date_now}.csv')"
    ]
   },
   {
@@ -3719,29 +3636,6 @@
    ],
    "source": [
     "df_ll.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 887,
-   "id": "86e060db",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"{'Ширина': '2 мм', 'Металл': 'Золото (Красное)', 'Проба': '585', 'Плетение': 'Нонна', 'Вид обработки': 'Алмазная грань', 'Вставка': '', 'Производитель': 'Каратов', 'Страна производитель': 'Россия'}\""
-      ]
-     },
-     "execution_count": 887,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ll['params'][4]"
    ]
   },
   {
@@ -4665,17 +4559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ll.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\linii_lubvy_{day}_{month}_{year}.xlsx', index =False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 912,
-   "id": "59f1a234",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_ll = df_ll.query(\"insert == 'Без вставки'\")"
+    "df_ll.to_excel(rf'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\tg_tn\\\\linii_lubvy_{date_now}.xlsx', index =False)"
    ]
   },
   {
@@ -4728,6 +4612,14 @@
    "source": [
     "print((df_ll['price_personal'].sum() / df_ll['weight'].sum()).round(0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "281d7563",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5197,7 +5089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 923,
+   "execution_count": 928,
    "id": "a47460a2",
    "metadata": {},
    "outputs": [],
@@ -5207,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 924,
+   "execution_count": 929,
    "id": "63300d5a",
    "metadata": {},
    "outputs": [],
@@ -5217,7 +5109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 925,
+   "execution_count": 930,
    "id": "6dd81aa1",
    "metadata": {},
    "outputs": [],
@@ -5228,7 +5120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 926,
+   "execution_count": 931,
    "id": "a04b1a4a",
    "metadata": {},
    "outputs": [],
@@ -5239,7 +5131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 927,
+   "execution_count": 932,
    "id": "bba52917",
    "metadata": {},
    "outputs": [
@@ -5249,7 +5141,7 @@
        "4"
       ]
      },
-     "execution_count": 927,
+     "execution_count": 932,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5257,6 +5149,84 @@
    "source": [
     "history.to_excel(fr'\\\\gold585.int\\uk\\Общее хранилище файлов\\Служба аналитики\\МЮР\\Онлайн мониторинг\\data\\\\avg_ppg_{date_now}.xlsx', index=False)\n",
     "history.to_sql('avg_ppg_for_monthly_monitoring', engine, schema = 'yura', if_exists='append', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 933,
+   "id": "2754c6b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>competitor</th>\n",
+       "      <th>avg_ppg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-05-16</td>\n",
+       "      <td>Adamas</td>\n",
+       "      <td>8583.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-05-16</td>\n",
+       "      <td>Sokolov</td>\n",
+       "      <td>8047.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-05-16</td>\n",
+       "      <td>Sunlight</td>\n",
+       "      <td>5972.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-05-16</td>\n",
+       "      <td>Линии любви</td>\n",
+       "      <td>7581.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date   competitor  avg_ppg\n",
+       "0 2024-05-16       Adamas   8583.0\n",
+       "1 2024-05-16      Sokolov   8047.0\n",
+       "2 2024-05-16     Sunlight   5972.0\n",
+       "3 2024-05-16  Линии любви   7581.0"
+      ]
+     },
+     "execution_count": 933,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history"
    ]
   },
   {
