--- a/data_all.ipynb
+++ b/data_all.ipynb
@@ -39,6 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime as dt\n",
     "date_now = dt.datetime.now().date().strftime('%d.%m.%Y')"
    ]
   },
